fixing contrast issue

--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -339,6 +339,7 @@ div #welText {
 #contact {
   font-family: 'Shadows Into Light', cursive;
   color: white;
+  font-size: x-large;
 }
 
 .sec1,
