--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -26,9 +26,7 @@ header {
   border-style: solid;
   border-color:  #706c61;
 }
-.griditem:hover {
-  box-shadow: 0 0 50px #333;
-}
+
 .gridtext {
   font-family: 'Shadows Into Light', cursive;
   color: #706c61;
@@ -73,7 +71,7 @@ h3 {
   padding-left: 35px;
   color: #E1F4F3;
   font-family: 'Shadows Into Light', cursive;
-  margin-bottom: 10 px;
+  margin-bottom: 10px;
   margin-top: 5px;
 }
 .navigation {
